[package]
name = "tomoru-google-helpers-rs"
version = "0.1.5"
authors = ["ssankko <literaamr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tasks = []
stt = []
tts = []
storage = []
logging = ["tokio", "lazy_static", "chrono"]
logging-hyper-requests = ["hyper", "futures"]

[dependencies]
yup-oauth2 = { version = "4.1.2" }
serde = {version="1.0.114"}
serde_json = {version = "1.0.56"}
webpki-roots = "0.20.0"
tokio-rustls = {version = "0.13"}
tonic = {version = "0.2.2", features = ["tls", "prost"]}
once_cell = "1.4.0"
prost = "0.6"
prost-types = "0.6"

tokio = {version = "0.2.21", optional = true}
futures = {version ="0.3.5", optional = true}
lazy_static = {version = "1.4.0", optional = true}
hyper = {version = "0.13.7", optional = true}
chrono = {version = "0.4.13", optional = true}

[build-dependencies]
tonic-build = {version = "0.2.0", default-features = false, features = ["transport", "prost"]}