[package]
name = "tomoru-helpers-rs"
version = "0.2.0"
authors = ["ssankko <literaamr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
google-tasks = ["_rpc", "_google"]
google-stt = ["_rpc", "_google"]
google-tts = ["_rpc", "_google"]
google-logging = ["tokio", "lazy_static", "chrono", "serde", "_rpc", "_google"]
google-logging-hyper-requests = ["hyper", "futures"]

yandex-stt = ["_yandex"]
yandex-streaming-stt = ["_yandex", "_rpc", "_streaming"]

_rpc = ["prost", "prost-types", "tonic", "serde_json", "tokio-rustls", "webpki-roots", "once_cell"]
_streaming = ["async-stream", "tokio"]
_yandex = ["tokio", "reqwest", "jsonwebtoken", "serde", "once_cell", "chrono", "lazy_static"]
_google = ["yup-oauth2"]

[dependencies]
prost = {version ="0.6", optional = true}
prost-types = {version = "0.6", optional = true}
yup-oauth2 = { version = "4.1.2", optional = true}
once_cell = {version ="1.4.0", optional = true}
webpki-roots = {version = "0.20.0", optional = true}
tokio-rustls = {version = "0.14", optional = true}
tonic = {version = "0.3.0", features = ["tls", "prost"], optional = true}
serde = {version="1.0.114", optional = true}
serde_json = {version = "1.0.56", optional = true}
tokio = {version = "0.2.21", optional = true}
futures = {version ="0.3.5", optional = true}
lazy_static = {version = "1.4.0", optional = true}
hyper = {version = "0.13.7", optional = true}
chrono = {version = "0.4.13", features=["serde"], optional = true}
reqwest = {version = "0.10.6", features = ["json"], optional = true}
jsonwebtoken = {version = "7.2.0", optional = true}
async-stream = {version = "0.2.1", optional = true}

[build-dependencies]
tonic-build = {version = "0.3.0", default-features = false, features = ["transport", "prost"]}